Add test for opening a local Polling-only socket.IO server and running a test with multiple messages in one HTTP body. Bump surefire to v3 so we can execute tests with Java modules.