@@ -50,6 +50,7 @@
     <skipTests>true</skipTests>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <netty.version>4.1.100.Final</netty.version>
+    <testCompileSource>11</testCompileSource>
   </properties>
 
   <profiles>
@@ -355,7 +356,7 @@
           <execution>
             <id>default-compile</id>
             <configuration>
-              <release>9</release>
+              <release>11</release>
               <!-- no excludes: compile everything to ensure module-info contains right entries -->
             </configuration>
           </execution>
@@ -371,6 +372,20 @@
               <excludes>
                 <exclude>module-info.java</exclude>
               </excludes>
+            </configuration>
+          </execution>
+          <!-- We'd like to use JDK11 APIs for the tests -->
+          <execution>
+            <id>default-testCompile</id>
+            <phase>process-test-sources</phase>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+            <configuration>
+              <source>${testCompileSource}</source>
+              <target>${testCompileSource}</target>
+              <release>${testCompileSource}</release>
+              <compilerArgs>--add-modules=java.net.http</compilerArgs>
             </configuration>
           </execution>
         </executions>
@@ -398,10 +413,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
+        <version>3.2.5</version>
         <configuration>
           <argLine>
             -javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.46/jmockit-1.46.jar
+            --add-reads netty.socketio=java.net.http
+            --add-modules=java.net.http
           </argLine>
         </configuration>
       </plugin>
